--- a/app/assets/stylesheets/dul_argon/metadata.scss
+++ b/app/assets/stylesheets/dul_argon/metadata.scss
@@ -22,6 +22,10 @@
     margin: 0;
     border-left: 8px solid #ddd;
 
+    .url-note-wrapper {
+      display: none;
+    }
+
     .institution-availability {
       /* Emulate a .row wrapping the .col -- may be better to fix */
       /* in TRLN Argon */
