--- a/app/assets/stylesheets/dul_argon/show.scss
+++ b/app/assets/stylesheets/dul_argon/show.scss
@@ -32,6 +32,7 @@
   }
 }
 
+
 #show-sub-header {
   margin-top: 1.5em;
   li.statement_of_responsibility_a {
@@ -61,9 +62,12 @@
   margin-left: 0;
 }
 
+
 .show-document {
   /* Consider refining these styles in TRLN Argon */
-  /* rather than override them here. See trln_argon_shared.scss */
+  /* rather than overriding them here. See trln_argon_shared.scss */
+  /* Doing this as an override necessitates using !important and */
+  /* using &:before, &::before */
   #authors, #included-works, #subjects {
     ul {
       list-style-type: square;
@@ -74,17 +78,22 @@
       padding-left: 0;
       li {
         margin-bottom: 6px;
-        display: inline-block;
-        margin-left: 1em;
+        display: block !important;
+        margin-left: 0;
         width: 100%;
-        &:before {
+        padding-left: 1em;
+        break-inside: avoid;
+        &:before, &::before {
           content: '■';
           margin-left: -1.5em;
-          display: block;
-          float: left;
-          margin-right: .5em;
-          font-size: 60%;
-          padding-top: .5em;
+          width: 1.5em;
+          height: 100%;
+          display: inline-block !important;
+          margin-right: 0 !important;
+          padding-top: 0.3em !important;
+          font-size: 0.6em !important;
+          float: none !important;
+          vertical-align: text-top;
         }
       }
     }
@@ -106,6 +115,7 @@
   }
 }
 
+
 #other-details, #related-works {
   dl.dl-invert {
     column-count: 2;
@@ -118,7 +128,7 @@
       break-inside: avoid;
       margin-bottom: 1.2em;
     }
-    & dt {
+    dt {
       padding: 0;
       margin: 0;
       font-weight: bold;
@@ -126,10 +136,13 @@
         margin-top: 15px;
       }
     }
-    & dd {
+    dd {
       padding: 0;
       margin: 0;
-      & ul {
+      br {
+        line-height: 2.25em;
+      }
+      ul {
         padding-left: 0;
       }
     }
